--- a/education.html
+++ b/education.html
@@ -51,8 +51,11 @@
   <!-- Container (About Section) -->
   <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
     <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">OVERVIEW</h3>
-    <p>Listed below are some recently completed courses...</p>
-    <br>
+    <p>After finishing school in Buckinghamshire, United Kingdom, I went on to study Art and Design at Amersham & Wycombe College, and then Sound Engineering (with Music Technology). </p>
+    <p>I love to keep learning and progressing my skills, so in 2014 I took a year long correspondence couse in Electronic Engineering.  In 2019 I took part in a 9 week intensive bootcamp learning webdesign at Ironhack Berlin.
+       In 2023 I took the 4-week XR Foundations Developer online course at XR Terra.
+    </p>
+    <p>Also listed below are numerous certificates I've received from online learning platforms.</p>
   </div>
 
 
@@ -72,7 +75,7 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/AR_Cert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Augmented Reality 101" width="500" height="333">
+        <img src="images/AR_Cert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Augmented Reality 101" width="100%" height="333">
       </div>
   
       <!-- DO NOT Hide this text on small devices -->
@@ -97,7 +100,7 @@
     <div class="w3-row dividerColGrey">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/partCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Intro to Particle Systems for Games" width="500" height="333">
+        <img src="images/partCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Intro to Particle Systems for Games" width="100%" height="333">
       </div>
   
       <!--DO NOT Hide this text on small device - Cert Name here -->
@@ -120,7 +123,7 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/XR_Terra_Cert.png" class="w3-round w3-image" alt="Photo of Me" title="XR Terra Cert" width="500" height="333">
+        <img src="images/XR_Terra_Cert.png" class="w3-round w3-image" alt="Photo of Me" title="XR Terra Cert" width="100%" height="333">
       </div>
   
       <!-- DO NOT Hide this text on small device - Cert Name here -->
@@ -145,7 +148,7 @@
     <div class="w3-row dividerColGrey">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/XR_Cert_GW.png" class="w3-round w3-image" alt="Photo of Me" title="Cert - Discover the XR Interaction Toolkit for VR" width="500" height="333">
+        <img src="images/XR_Cert_GW.png" class="w3-round w3-image" alt="Photo of Me" title="Cert - Discover the XR Interaction Toolkit for VR" width="100%" height="333">
       </div>
   
       <!-- DO NOT Hide this text on small devices - Discover the XR Interaction Toolkit for VR -->
@@ -169,7 +172,7 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/CompWebDevCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - The complete 2023 Web Dev Bootcamp" width="500" height="333">
+        <img src="images/CompWebDevCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - The complete 2023 Web Dev Bootcamp" width="100%" height="333">
       </div>
   
       <!-- DO NOT Hide this text on small device - Cert Name here -->
@@ -194,7 +197,7 @@
     <div class="w3-row dividerColGrey">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/3dSpiel_Cert_GW.png" class="w3-round w3-image" alt="Photo of Me" title="Cert - Create Your First 3D Game in Unity" width="500" height="333">
+        <img src="images/3dSpiel_Cert_GW.png" class="w3-round w3-image" alt="Photo of Me" title="Cert - Create Your First 3D Game in Unity" width="100%" height="333">
       </div>
   
       <!-- DO NOT Hide this text on small devices - Cert - Create Your First 3D Game in Unity  -->
@@ -218,7 +221,7 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/MobDevCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Mobile Game Development for Beginners" width="500" height="333">
+        <img src="images/MobDevCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Mobile Game Development for Beginners" width="100%" height="333">
       </div>
   
       <!-- DO NOT Hide this text on small device - Cert Name here -->
@@ -241,7 +244,7 @@
     <div class="w3-row dividerColGrey">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/AffinityCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Learn the Entire Affinity Suite" width="500" height="333">
+        <img src="images/AffinityCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Learn the Entire Affinity Suite" width="100%" height="333">
       </div>
   
       <!-- DO NOT Hide this text on small device - Cert Name here -->
@@ -266,7 +269,7 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/C_Sharp_Cert_GW.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Unity Mini-Projects - C# Fundamentals" width="500" height="333">
+        <img src="images/C_Sharp_Cert_GW.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Unity Mini-Projects - C# Fundamentals" width="100%" height="333">
       </div>
   
       <!-- DO NOT Hide this text on small device - Cert - "Unity Mini-Projects - C# Fundamentals"s -->
@@ -292,7 +295,7 @@
     <div class="w3-row dividerColGrey">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/dataCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Data Privacy Training Basic" width="500" height="333">
+        <img src="images/dataCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Data Privacy Training Basic" width="100%" height="333">
       </div>
   
       <!-- DO NOT Hide this text on small device - Cert Name here -->
@@ -315,7 +318,7 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images\GameOfLifeCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Build The Game Of Life"  width="500" height="333">
+        <img src="images\GameOfLifeCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Build The Game Of Life"  width="100%" height="333">
       </div>
   
       <!-- DO NOT Hide this text on small device - Cert Name here -->
@@ -342,7 +345,7 @@
     <div class="w3-row dividerColGrey">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/SEO21Cert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Complete SEO Training 2021" width="500" height="333">
+        <img src="images/SEO21Cert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Complete SEO Training 2021" width="100%" height="333">
       </div>
   
       <!-- DO NOT Hide this text on small device - Cert Name here -->
@@ -368,7 +371,7 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/MusicBoxCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Generative Music Box" width="500" height="333">
+        <img src="images/MusicBoxCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Generative Music Box" width="100%" height="333">
       </div>
   
       <!-- DO NOT Hide this text on small device - Cert Name here -->
@@ -396,7 +399,7 @@
     <div class="w3-row dividerColGrey">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/VRexpCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Building Your First VR Experience With Unity" width="500" height="333">
+        <img src="images/VRexpCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Building Your First VR Experience With Unity" width="100%" height="333">
       </div>
   
       <!-- DO NOT Hide this text on small device - Cert Name here -->
@@ -422,7 +425,7 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/xddc_Cert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - XD/DC UI/UX Course" width="500" height="333">
+        <img src="images/xddc_Cert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - XD/DC UI/UX Course" width="100%" height="333">
       </div>
   
       <!-- DO NOT Hide this text on small device - Cert Name here -->
@@ -447,7 +450,7 @@
     <div class="w3-row dividerColGrey">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/seoTrainCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - SEO Training" width="500" height="333">
+        <img src="images/seoTrainCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - SEO Training" width="100%" height="333">
       </div>
   
       <!-- DO NOT Hide this text on small device - Cert Name here -->
@@ -475,7 +478,7 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/irnHckCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - 9-Week Web Development Bootcamp" width="500" height="333">
+        <img src="images/irnHckCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - 9-Week Web Development Bootcamp" width="100%" height="333">
       </div>
   
       <!-- DO NOT Hide this text on small device - Cert Name here -->
@@ -506,7 +509,7 @@
     <div class="w3-row dividerColGrey">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/AngCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Angular Back To Front" width="500" height="333">
+        <img src="images/AngCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Angular Back To Front" width="100%" height="333">
       </div>
   
       <!-- DO NOT Hide this text on small device - Cert Name here -->
@@ -536,7 +539,7 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/uiUxCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - UI UX Design Thinking" width="500" height="333">
+        <img src="images/uiUxCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - UI UX Design Thinking" width="100%" height="333">
       </div>
   
       <!-- DO NOT Hide this text on small device - Cert Name here -->
@@ -566,7 +569,7 @@
     <div class="w3-row dividerColGrey">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/AndroidCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Android Basics Nanodegree by Google" width="500" height="333">
+        <img src="images/AndroidCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Android Basics Nanodegree by Google" width="100%" height="333">
       </div>
   
       <!-- DO NOT Hide this text on small device - Cert Name here -->
@@ -593,7 +596,7 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/AlgeCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - AlgebraX: Introduction to Algebra" width="500" height="333">
+        <img src="images/AlgeCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - AlgebraX: Introduction to Algebra" width="100%" height="333">
       </div>
   
       <!-- DO NOT Hide this text on small device - Cert Name here -->
@@ -620,7 +623,7 @@
     <div class="w3-row dividerColGrey">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/ee40lxCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - EE40LX: Electronic Interfaces: Bridging the Physical and Digital Worlds" width="500" height="333">
+        <img src="images/ee40lxCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - EE40LX: Electronic Interfaces: Bridging the Physical and Digital Worlds" width="100%" height="333">
       </div>
   
       <!-- DO NOT Hide this text on small device - Cert Name here -->
