--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <video width="400" poster="images/FishGif.gif" controls>
+        <video width="100%" poster="images/FishGif.gif" controls>
           <source src="images/aquariumVR.mp4" type="video/mp4">
           <source src="movie.ogg" type="video/ogg">
         Your browser does not support the video tag.
@@ -125,7 +125,7 @@
           <div class="w3-col m6 w3-center w3-padding-large">
             <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
             <!-- <img src="images/VR_Driving.png" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333"> -->
-            <video width="400"  poster="images/VRdriveGif.gif" controls alt="VR Drivin video" title="Click to play">
+            <video width="100%" poster="images/VRdriveGif.gif" controls alt="VR Drivin video" title="Click to play">
               <source src="images/vrDrivin.mp4" type="video/mp4">
             Your browser does not support the video tag.
             </video>
@@ -184,7 +184,7 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <video width="400" poster="images/xrTerraGif.gif" controls alt="XR Terra Classwork" title="Click to play">
+        <video width="100%" poster="images/xrTerraGif.gif" controls alt="XR Terra Classwork" title="Click to play">
           <source src="images/XrTerra.mp4" type="video/mp4">
           <source src="movie.ogg" type="video/ogg">
         Your browser does not support the video tag.
@@ -231,7 +231,7 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <video width="400" poster="images/AR_Car.gif"  alt="Augmented Reality Car on Table" title="Augmented Reality">
+        <video width="100%" poster="images/AR_Car.gif"  alt="Augmented Reality Car on Table" title="Augmented Reality">
         Your browser does not support the video tag.
         </video>
         <!-- <img src="images/fishTank1.png" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333"> -->
@@ -258,14 +258,15 @@
           <source src="movie.ogg" type="video/ogg">
         Your browser does not support the video tag. -->
         <!-- </video> -->
-        <img src="images/StringSynthCutOut.png" alt="DIY String Synth with Analog Filter" title="DIY String Synth with Analog Filter" width="500">
+        <img src="images/StringSynthCutOut.png" alt="DIY String Synth with Analog Filter" title="DIY String Synth with Analog Filter" width="100%">
         <!-- <img src="images/fishTank1.png" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333"> -->
       </div>
     
         <!-- Do Not Hide this text on small devices -->
         <div class="w3-col m6 w3-padding-large">
           <p>As well as VR Development I also have a deep passion for designing and creating synthesisers (electronic musical instruments).</p>
-          <p>The majority of these instruments are built using C++, the Mozzi audio library, low cost Arduino development boards, and analog electronic circuits. The designs of which I make open source (available via my blog) and also publish instructions of how to make them for beginners.</p>
+          <p>The majority of these instruments are built using C++, the Mozzi audio library, low cost Arduino development boards, and analog electronic circuits. 
+            The designs of which I make open source (available via my blog) and also publish instructions of how to make them for beginners.</p>
           <p>If I make a small run of units, I'll often create PCBs using the Kicad software.</p>
           <p>You can see some video examples <a href="https://youtu.be/KQcI7oKE1pc" target=”_blank” >here</a>, <a href="https://youtu.be/YTnBbq2hj9Q" target=”_blank” > here</a>, and <a href="https://youtu.be/zM8YlW-HCEM" target=”_blank”>here.</a></p>
         </div>
