--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/GHck.jpg" class="w3-round w3-image" alt="Photo of Me" width="300">
+        <img src="images/GHck.jpg" class="w3-round w3-image" alt="Photo of Me" width="65%">
       </div>
   
       <!-- Do Not Hide this text on small devices -->
