--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
   <!-- First Parallax Image with Logo Text -->
   <div class="bgimg-1 w3-display-container w3-opacity-min">
     <div class="w3-display-middle" >
-        <span class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-animate-opacity"><span>DIGITAL </span><span>SUNSET </span><span>STUDIOS</span>
+        <!-- <span class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-animate-opacity"><span>DIGITAL </span><span>SUNSET </span><span>STUDIOS</span> -->
+        <h1 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-animate-opacity">DIGITAL SUNSET STUDIOS</h1>
         <!-- <span class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-animate-opacity" style="font-size:3vw !important"><span>DIGITAL </span><span>SUNSET </span><span>STUDIOS</span> -->
   
         <!-- <div class="flex-container">
@@ -81,7 +82,7 @@
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
         <!-- <img src="images/DigitalSunsetLogo.png" class="w3-round w3-image" alt="Logo" title="Logo" width="500" height="333"> -->
-        <video width="90%" poster="images/VR_Comp.gif" alt="Digital Sunset Compilation video" title="Digital Sunset Compilation video">
+        <video width="100%" poster="images/VR_Comp.gif" alt="Digital Sunset Compilation video" title="Digital Sunset Compilation video">
         </video>
       </div>
   
