blue hamburger, text

--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
   
       <!-- Do Not Hide this text on small devices -->
       <div class="w3-col m6  w3-padding-large">
-        <p>By day a web developer, but at night I put on my glasses and become a VR Developer!  Purely a passion project, Digital Sunset Studios is the name I work under for my VR projects.
+        <p>By day a web developer, but at night I put on my glasses and become a VR Developer.  Purely a passion project, Digital Sunset Studios is the name I work under for my VR projects.
           In 2016 I first started playing around with Google Cardboard and Unity. Since then I've progressed into making experiences for the Occulus Quest and Rift.</p>
           <p>Originally I studied Sound Engineering and Electronic Engineering, but have always been facinated with programming so in 2019 I took part in the 9 week Web Development course at Ironhack Berlin.</p>
       </div>
