--- a/education.html
+++ b/education.html
@@ -51,15 +51,18 @@
   <!-- Container (About Section) -->
   <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
     <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">OVERVIEW</h3>
-    <p>After finishing school in Buckinghamshire, United Kingdom, I went on to study Art and Design at Amersham & Wycombe College, and then Sound Engineering (with Music Technology). </p>
-    <p>I love to keep learning and progressing my skills, so in 2014 I took a year long correspondence couse in Electronic Engineering.  In 2019 I took part in a 9 week intensive bootcamp learning webdesign at Ironhack Berlin.
-       In 2023 I took the 4-week XR Foundations Developer online course at XR Terra.
-    </p>
-    <p>Also listed below are numerous certificates I've received from online learning platforms.</p>
+    <ul>
+      <li>2023 - XR Terra - 4-week XR Foundations Developer (VR)</li>
+      <li>2019 - Ironhack, Berlin - 9-week Web Development Bootcamp</li>
+      <li>2017 - Udacity - Android Development, Scholarship funded by Google</li>
+      <li>2013/2014 - International Correspondence Schools - Bachelor of Technology (BTECH Level 3) Electronic Engineering</li>
+      <li>2009 - BSI Language School Berlin - Intensive Course, German</li>
+      <li>2007 - St. Martin's College, London - Introduction To Maya (Short Course)</li>
+      <li>1998/2001 - Amersham & Wycombe College, Bucks - Bachelor of Technology (BTECH) Sound Engineeering with Music Technology (GNVQ)</li>
+      <li>1997/1998 - Amersham & Wycombe College, Bucks - GNVQ in Art and Design</li>
+      <li>1993/1997 - The Grange School, Aylesbury</li>
+    </ul>
   </div>
-
-
-
 
   <!-- Container (About Section) -->
   <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
