--- a/portfolio.html
+++ b/portfolio.html
@@ -127,17 +127,17 @@
             <!-- <img src="images/VR_Driving.png" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333"> -->
             <video width="100%" poster="images/VRdriveGif.gif" controls alt="VR Drivin video" title="Click to play">
               <source src="images/vrDrivin.mp4" type="video/mp4">
-            Your browser does not support the video tag.
+                Your browser does not support the video tag.
             </video>
           </div>
       
             <!-- Hide this text on small devices -->
             <div class="w3-col m6 w3-padding-small">
               <p>Hard Drivin was released by Atari Games way back in 1989, and this is my attempt to bring it over into VR.</p>
-          <p>I was a big fan of the original, however I only ever experienced it at 12 frames per second on the Sega Mega Drive.  Thanks to modern hardware, this version is currently running a lot quicker than 12fps.</p>
-          <p>The 3d models were all built within Unity and any more detailed graphics (text etc) were creating using Affinity Designer, then heavily compressed and imported.</p>
-          <p>There's still much more work to be completed (like finishing the track!), however this demo certainly conveys the speed and the handling of the Arcade original.</p>
-          <p>Please click the GIF to view the longer video.</p>
+              <p>I was a big fan of the original, however I only ever experienced it at 12 frames per second on the Sega Mega Drive.  Thanks to modern hardware, this version is currently running a lot quicker than 12fps.</p>
+              <p>The 3d models were all built within Unity and any more detailed graphics (roadsign text, hedges etc) were creating using Affinity Designer, then heavily compressed before being imported.</p>
+              <p>There's still much more work to be completed (like finishing the track!), however this demo certainly conveys the speed and the handling of the Arcade original.</p>
+              <p>Please click the GIF to view the full length video.</p>
             </div>
         </div>
             <!-- Hide This on Mobile -->
