education page now visible

--- a/education.html
+++ b/education.html
@@ -21,9 +21,10 @@
         <i class="fa fa-bars"></i>
       </a>
       <a href="index.html" class="w3-bar-item w3-button NaVFontCol">HOME</a>
-      <a href="portfolio.html" class="w3-bar-item w3-button w3-hide-small NaVFontCol"></i> PORTFOLIO</a>
-      <a href="about.html" class="w3-bar-item w3-button w3-hide-small NaVFontCol"> ABOUT</a>
-      <a href="contact.html" class="w3-bar-item w3-button w3-hide-small NaVFontCol"></i> CONTACT</a>
+      <a href="portfolio.html" class="w3-bar-item w3-button w3-hide-small NaVFontCol"></i>PORTFOLIO</a>
+      <a href="about.html" class="w3-bar-item w3-button w3-hide-small NaVFontCol">ABOUT</a>
+      <a href="education.html" class="w3-bar-item w3-button w3-hide-small NaVFontCol">EDUCATION</a>
+      <a href="contact.html" class="w3-bar-item w3-button w3-hide-small NaVFontCol"></i>CONTACT</a>
       <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
         <!-- <i class="fa fa-search"></i> -->
       </a>
@@ -33,6 +34,7 @@
     <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
       <a href="portfolio.html" class="w3-bar-item w3-button NaVFontCol" onclick="toggleFunction()">PORTFOLIO</a>
       <a href="about.html" class="w3-bar-item w3-button NaVFontCol" onclick="toggleFunction()">ABOUT</a>
+      <a href="education.html" class="w3-bar-item w3-button NaVFontCol" onclick="toggleFunction()">EDUCATION</a>
       <a href="contact.html" class="w3-bar-item w3-button NaVFontCol" onclick="toggleFunction()">CONTACT</a>
       <!-- <a href="#" class="w3-bar-item w3-button">SEARCH</a> -->
     </div>
@@ -51,6 +53,7 @@
   <!-- Container (About Section) -->
   <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
     <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">OVERVIEW</h3>
+    <br>
     <ul>
       <li>2023 - XR Terra - 4-week XR Foundations Developer (VR)</li>
       <li>2019 - Ironhack, Berlin - 9-week Web Development Bootcamp</li>
@@ -67,6 +70,7 @@
   <!-- Container (About Section) -->
   <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
     <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">CERTIFICATES & QUALIFICATIONS</h3>
+    <br>
     <p>Listed below are some recently completed courses...</p>
     <br>
 
