--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,7 @@
       <a href="index.html" class="w3-bar-item w3-button NaVFontCol">HOME</a>
       <a href="portfolio.html" class="w3-bar-item w3-button w3-hide-small NaVFontCol"></i> PORTFOLIO</a>
       <a href="about.html" class="w3-bar-item w3-button w3-hide-small NaVFontCol"> ABOUT</a>
+      <a href="education.html" class="w3-bar-item w3-button w3-hide-small NaVFontCol">EDUCATION</a>
       <a href="contact.html" class="w3-bar-item w3-button w3-hide-small NaVFontCol"></i> CONTACT</a>
       <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
         <!-- <i class="fa fa-search"></i> -->
@@ -33,6 +34,7 @@
     <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
       <a href="portfolio.html" class="w3-bar-item w3-button NaVFontCol" onclick="toggleFunction()">PORTFOLIO</a>
       <a href="about.html" class="w3-bar-item w3-button NaVFontCol" onclick="toggleFunction()">ABOUT</a>
+      <a href="education.html" class="w3-bar-item w3-button NaVFontCol" onclick="toggleFunction()">EDUCATION</a>
       <a href="contact.html" class="w3-bar-item w3-button NaVFontCol" onclick="toggleFunction()">CONTACT</a>
       <!-- <a href="#" class="w3-bar-item w3-button">SEARCH</a> -->
     </div>
@@ -71,6 +73,9 @@
       </div>
     </div>
   </div>
+  <br>
+  <br>
+  <br>
   
   <!-- Footer -->
   <footer class="w3-center w3-black w3-padding-64">
