--- a/portfolio.html
+++ b/portfolio.html
@@ -20,9 +20,10 @@
         <i class="fa fa-bars"></i>
       </a>
       <a href="index.html" class="w3-bar-item w3-button NaVFontCol">HOME</a>
-      <a href="portfolio.html" class="w3-bar-item w3-button w3-hide-small NaVFontCol"></i> PORTFOLIO</a>
-      <a href="about.html" class="w3-bar-item w3-button w3-hide-small NaVFontCol"> ABOUT</a>
-      <a href="contact.html" class="w3-bar-item w3-button w3-hide-small NaVFontCol"></i> CONTACT</a>
+      <a href="portfolio.html" class="w3-bar-item w3-button w3-hide-small NaVFontCol"></i>PORTFOLIO</a>
+      <a href="about.html" class="w3-bar-item w3-button w3-hide-small NaVFontCol">ABOUT</a>
+      <a href="education.html" class="w3-bar-item w3-button w3-hide-small NaVFontCol">EDUCATION</a>
+      <a href="contact.html" class="w3-bar-item w3-button w3-hide-small NaVFontCol"></i>CONTACT</a>
       <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
         <!-- <i class="fa fa-search"></i> -->
       </a>
@@ -32,6 +33,7 @@
     <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
       <a href="portfolio.html" class="w3-bar-item w3-button NaVFontCol" onclick="toggleFunction()">PORTFOLIO</a>
       <a href="about.html" class="w3-bar-item w3-button NaVFontCol" onclick="toggleFunction()">ABOUT</a>
+      <a href="education.html" class="w3-bar-item w3-button NaVFontCol" onclick="toggleFunction()">EDUCATION</a>
       <a href="contact.html" class="w3-bar-item w3-button NaVFontCol" onclick="toggleFunction()">CONTACT</a>
       
     </div>
