--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
   <div id="home"><br><br></div>
   
   <!-- First Parallax Image with Logo Text -->
-  <div class="bgimg-1 w3-display-container w3-opacity-min" >
+  <div class="bgimg-1 w3-display-container w3-opacity-min" alt="Digital Sunset Studios Projects" title="Digital Sunset Studios Projects">
     <div class="w3-display-middle" style="white-space:nowrap;">
       <span class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-animate-opacity">CONTACT<span class="w3-hide-small"></span></span>
     </div>
@@ -57,7 +57,7 @@
   
     <div class="w3-row w3-padding-32 w3-section">
       <div class="w3-col m4 w3-container">
-        <img src="images\DigitalSunsetLogo.png" class="w3-image w3-round" style="width:100%">
+        <img src="images\DigitalSunsetLogo.png" class="w3-image w3-round" alt="Digital Sunset Studios Logo" title="Digital Sunset Studios Logo" style="width:100%">
       </div>
       <div class="w3-col m8 w3-panel">
         <div class="w3-large w3-margin-bottom">
