--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,9 @@
         <i class="fa fa-bars"></i>
       </a>
       <a href="index.html" class="w3-bar-item w3-button NaVFontCol">HOME</a>
-      <a href="portfolio.html" class="w3-bar-item w3-button w3-hide-small NaVFontCol"></i>PORTFOLIO</a>
+      <a href="portfolio.html" class="w3-bar-item w3-button w3-hide-small NaVFontCol"></i>VR DEV</a>
+      <a href="hardware.html" class="w3-bar-item w3-button w3-hide-small NaVFontCol"></i>HARDWARE</a>
+      <a href="webdev.html" class="w3-bar-item w3-button w3-hide-small NaVFontCol"></i>WEB DEV</a>
       <a href="about.html" class="w3-bar-item w3-button w3-hide-small NaVFontCol">ABOUT</a>
       <a href="education.html" class="w3-bar-item w3-button w3-hide-small NaVFontCol">EDUCATION</a>
       <a href="contact.html" class="w3-bar-item w3-button w3-hide-small NaVFontCol"></i>CONTACT</a>
@@ -31,7 +33,9 @@
   
     <!-- Navbar on small screens -->
     <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
-      <a href="portfolio.html" class="w3-bar-item w3-button NaVFontCol" onclick="toggleFunction()">PORTFOLIO</a>
+      <a href="portfolio.html" class="w3-bar-item w3-button NaVFontCol" onclick="toggleFunction()">VR DEV</a>
+      <a href="hardware.html" class="w3-bar-item w3-button NaVFontCol" onclick="toggleFunction()">HARDWARE</a>
+      <a href="webdev.html" class="w3-bar-item w3-button NaVFontCol" onclick="toggleFunction()">WEB DEV</a>
       <a href="about.html" class="w3-bar-item w3-button NaVFontCol" onclick="toggleFunction()">ABOUT</a>
       <a href="education.html" class="w3-bar-item w3-button NaVFontCol" onclick="toggleFunction()">EDUCATION</a>
       <a href="contact.html" class="w3-bar-item w3-button NaVFontCol" onclick="toggleFunction()">CONTACT</a>
@@ -294,7 +298,31 @@
               <img src="images/pcbs_angled.png" style="width:100%" width="217" height="135"  onclick="onClick(this)" class="w3-hover-opacity" alt="Printed Circuit Boards" title="Printed Circuit Boards">
             </div>
           </div>
-          <br><br>
+          <br>
+      </div>
+
+
+
+      <!-- Container (2D Games) -->
+      <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
+        <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">2D Side Scrolling Game</h3>
+        <p class="w3-center"><em>A Super Mario Clone</em></p>
+        <div class="w3-row">
+          <div class="w3-col m6 w3-center w3-padding-large">
+            <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
+            <video width="100%" poster="images/SupCherGhoGif.gif"  alt="A Super Mario Clone" title="Super Cherry Ghost">
+            Your browser does not support the video tag.
+            </video>
+            <!-- <img src="images/fishTank1.png" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333"> -->
+          </div>
+        
+            <!-- DO NOT Hide this text on small devices -->
+            <div class="w3-col m6 w3-padding-large">
+              <p>As a right of passage, I've also made a working demo of a Mario-like 2D side scrolling game called 'Super Cherry Ghost.'</p>
+              <p>Built using the Corgi Engine, I was quickly able to create a functional prototype complete with paralax backgrounds and enemies.</p>
+            </div>
+          </div>
+        </div>
       </div>
       
 
