--- a/index.html
+++ b/index.html
@@ -102,20 +102,20 @@
 
     <!-- Container (Example Projects) -->
     <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
-      <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">EXAMPLE PROJECTS</h3>
+      <!-- <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">EXAMPLE PROJECTS</h3> -->
       <p></p>
       <br>  
       <br> 
         <div class="animImgDiv">
           <div class="flex-container">
             <div>
-              <a href="portfolio.html"><img src="images\VR_Driving.png" style="--f:.12;--r:1%" class="imgAnim" alt="VR Driving" title="VR driving project"></a>
+              <a href="portfolio.html"><img src="images/VR_Link.png" style="--f:.12;--r:1%" class="imgAnim" alt="VR Driving" title="VR driving project"></a>
             </div>
             <div>
-              <a href="portfolio.html"><img src="images\fishTank1.png" style="--f:.12;--r:1%" class="imgAnim" alt="aquarium VR" title="Aquarium project"></a>
+              <a href="hardware.html"><img src="images/hard_link.png" style="--f:.12;--r:1%" class="imgAnim" alt="aquarium VR" title="Aquarium project"></a>
             </div>
             <div>
-              <a href="portfolio.html"><img src="images\xrTerra2.png" style="--f:.12;--r:1%" class="imgAnim" alt="XR Terra coursework" title="XR Terra coursework"></a>
+              <a href="webdev.html"><img src="images/webdev_link.png" style="--f:.12;--r:1%" class="imgAnim" alt="XR Terra coursework" title="XR Terra coursework"></a>
             </div>  
           </div>
         </div>
