shrink images and gifs

--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
         <div class="animImgDiv">
           <div class="flex-container">
             <div>
-              <a href="portfolio.html"><img src="images/VR_Link.png" style="--f:.12;--r:1%" class="imgAnim" alt="VR Driving" title="VR driving project"></a>
+              <a href="portfolio.html"><img src="images/VR_Link.png" style="--f:.12;--r:1%" class="imgAnim" alt="VR projects link" title="Open VR projects page"></a>
             </div>
             <div>
-              <a href="hardware.html"><img src="images/hard_link.png" style="--f:.12;--r:1%" class="imgAnim" alt="aquarium VR" title="Aquarium project"></a>
+              <a href="hardware.html"><img src="images/hard_link.png" style="--f:.12;--r:1%" class="imgAnim" alt="Hardware projects link" title="Open Hardware projects page"></a>
             </div>
             <div>
-              <a href="webdev.html"><img src="images/webdev_link.png" style="--f:.12;--r:1%" class="imgAnim" alt="XR Terra coursework" title="XR Terra coursework"></a>
+              <a href="webdev.html"><img src="images/webdev_link.png" style="--f:.12;--r:1%" class="imgAnim" alt="Web Dev projects link" title="Open Web Dev projects page"></a>
             </div>  
           </div>
         </div>
