--- a/education.html
+++ b/education.html
@@ -21,9 +21,9 @@
         <i class="fa fa-bars"></i>
       </a>
       <a href="index.html" class="w3-bar-item w3-button NaVFontCol">HOME</a>
-      <a href="portfolio.html" class="w3-bar-item w3-button w3-hide-small NaVFontCol"></i>VR DEV</a>
+      <a href="portfolio.html" class="w3-bar-item w3-button w3-hide-small NaVFontCol"></i>VR</a>
       <a href="hardware.html" class="w3-bar-item w3-button w3-hide-small NaVFontCol"></i>HARDWARE</a>
-      <a href="webdev.html" class="w3-bar-item w3-button w3-hide-small NaVFontCol"></i>WEB DEV</a>
+      <a href="webdev.html" class="w3-bar-item w3-button w3-hide-small NaVFontCol"></i>WEB</a>
       <a href="about.html" class="w3-bar-item w3-button w3-hide-small NaVFontCol">ABOUT</a>
       <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
         <!-- <i class="fa fa-search"></i> -->
@@ -32,9 +32,9 @@
   
     <!-- Navbar on small screens -->
     <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
-      <a href="portfolio.html" class="w3-bar-item w3-button NaVFontCol" onclick="toggleFunction()">VR DEV</a>
+      <a href="portfolio.html" class="w3-bar-item w3-button NaVFontCol" onclick="toggleFunction()">VR</a>
       <a href="hardware.html" class="w3-bar-item w3-button NaVFontCol" onclick="toggleFunction()">HARDWARE</a>
-      <a href="webdev.html" class="w3-bar-item w3-button NaVFontCol" onclick="toggleFunction()">WEB DEV</a>
+      <a href="webdev.html" class="w3-bar-item w3-button NaVFontCol" onclick="toggleFunction()">WEB</a>
       <a href="about.html" class="w3-bar-item w3-button NaVFontCol" onclick="toggleFunction()">ABOUT</a>
       <!-- <a href="#" class="w3-bar-item w3-button">SEARCH</a> -->
     </div>
