--- a/portfolio.html
+++ b/portfolio.html
@@ -269,7 +269,7 @@
                 <!-- DO NOT Hide this text on small devices -->
                 <div class="w3-col m6 w3-padding-large">
                   <p>Of course, not everything is in VR! As a right of passage it's almost compulsory to make a working demo of a Mario-like 2D side scrolling game.  Mine's called 'Super Cherry Ghost.'</p>
-                  <p>Built using the Corgi Engine, I was quickly able to create a functional prototype complete with paralax backgrounds and enemies.</p>
+                  <p>Built using the Corgi Engine within Unity, I was quickly able to create a functional prototype complete with paralax backgrounds and enemies.</p>
                 </div>
               </div>
             </div>
