hardware page finished

--- a/webdev.html
+++ b/webdev.html
@@ -73,7 +73,7 @@
           <p>React, Node.js, Express.js, MongoDB, Bootstrap, HTML & CSS</p>
           
           
-          <p>You can see some full code over on <a href="https://github.com/gary909/audiogramm" target=”_blank”>GitHub.</a></p>
+          <p>You can see the full code over on <a href="https://github.com/gary909/audiogramm" target=”_blank”>GitHub.</a></p>
       </div>
       <br>
         <br>
@@ -176,7 +176,7 @@
             <div class="w3-col m6 w3-padding-large">
               <p>Play a drum kit in your browser using your keyboard keys to trigger the different drum sounds. Simple but fun!</p>
               <p>Built using Javascript, HTML & CSS, the page is also responsive to aspect ratio change.</p>
-              <p>Full the full code here: <a href="https://github.com/gary909/DrumKit" target=”_blank”>Drum Kit Code on GitHub</a></p>
+              <p>See the full code here: <a href="https://github.com/gary909/DrumKit" target=”_blank”>Drum Kit Code on GitHub</a></p>
             </div>
           </div>
           <br>
