webdev page etc

--- a/about.html
+++ b/about.html
@@ -66,14 +66,16 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
+        <br>
         <img src="images/GHck.jpg" class="w3-round w3-image" alt="Photo of Me" width="65%">
       </div>
   
       <!-- Do Not Hide this text on small devices -->
       <div class="w3-col m6  w3-padding-large">
-        <p>By day a web developer, but at night I put on my glasses and become a VR Developer.  Purely a passion project, Digital Sunset Studios is the name I work under for my VR projects.
-          In 2016 I first started playing around with Google Cardboard and Unity. Since then I've progressed into making experiences for the Occulus Quest and Rift.</p>
-          <p>Originally I studied Sound Engineering and Electronic Engineering, but have always been facinated with programming so in 2019 I took part in the 9 week Web Development course at Ironhack Berlin.</p>
+        <p>Purely a passion project, Digital Sunset Studios is the name I work under for my software projects.</p>
+        <p>In 2013 I first started playing with electronics, then later on after winning a Google programming scholarship, I started to combine this with programming.</p>
+        <p>After taking an intensive 9 week Web Dev bootcamp in 2019 I have worked as a full time web developer, but at night I put on my glasses and become a VR Developer, as well as creating hardware synthersizers for fun.</p>
+        <p>I currently live in Leipzig, Germany.</p>
       </div>
     </div>
 
