--- a/webdev.html
+++ b/webdev.html
@@ -120,12 +120,8 @@
         
             <!-- DO NOT Hide this text on small devices -->
             <div class="w3-col m6 w3-padding-large">
-              <p>The game you can't win! Designed to be overly-complicated, you need to decide if the anti-EU headline is true or false by
-                collecting a 'yes' or 'no' tick, all the while balancing public anger and gullibility by collecting pints of beer.  Every correct guess spawns an English
-                flag which if you accidentally collect will end the game ("Avoid Nationalism!").
-              </p>
-              <p>This game was created using the Phaser library and Javascript for the first project of Ironhack Berlin.</p>
-              <p>You can see the code over on <a href="https://github.com/gary909/angular-todolist" target=”_blank”>GitHub</a></p>
+              <p>This is a classic 'TODO' list app that was created using Angular and using the JSON placeholder API to gather the TODOs.</p>
+              <p>You can see the full code over on <a href="https://github.com/gary909/angular-todolist" target=”_blank”>GitHub</a></p>
             </div>
           </div>
         </div>
