--- a/portfolio.html
+++ b/portfolio.html
@@ -118,7 +118,7 @@
       <div class="w3-content w3-container w3-padding-64" id="portfolio">
         <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">VR DRIVIN'</h3>
         <!-- <h3 class="w3-center">VR Drivin'</h3> -->
-        <p class="w3-center"><em>A Fan remake of the 80's Classic driving Game<br>
+        <p class="w3-center"><em>A Fan remake of the 80's Classic driving Game</em><br>
     
 
 
