--- a/webdev.html
+++ b/webdev.html
@@ -81,7 +81,7 @@
 
       <!-- Container (PETS OF BERLIN) -->
       <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
-        <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">Pets Of Berlin App</h3>
+        <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">PETS OF BERLIN APP</h3>
         <p class="w3-center"><em>Location based pet breeding app</em></p>
         <div class="w3-row">
           <div class="w3-col m6 w3-center w3-padding-large">
@@ -131,7 +131,7 @@
 
       <!-- Container (BREXIT Game) -->
       <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
-        <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">BREXIT Game</h3>
+        <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">BREXIT GAME</h3>
         <p class="w3-center"><em>PHASER FUN</em></p>
         <div class="w3-row">
           <div class="w3-col m6 w3-center w3-padding-large">
@@ -154,32 +154,7 @@
           </div>
         </div>
       </div>
-
-      <!-- Container (Online DRUM KIT) -->
-      <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
-        <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">BROWSER DRUM KIT</h3>
-        <p class="w3-center"><em>BANGING ON</em></p>
-        <div class="w3-row">
-          <div class="w3-col m6 w3-center w3-padding-large">
-            <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-            <video width="90%" poster="images/drumKitGif.gif" alt="Online Drum Kit App" title="Online Drum Kit App">
-            Your browser does not support the video tag.
-            </video>
-            <!-- <img src="images/fishTank1.png" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333"> -->
-          </div>
-        
-            <!-- DO NOT Hide this text on small devices -->
-            <div class="w3-col m6 w3-padding-large">
-              <p>Play a drum kit in your browser using your keyboard keys to trigger the different drum sounds. Simple but fun!</p>
-              <p>Built using Javascript, HTML & CSS, the page is also responsive to aspect ratio change.</p>
-              <p>See the full code here: <a href="https://github.com/gary909/DrumKit" target=”_blank”>Drum Kit Code on GitHub</a></p>
-            </div>
-          </div>
-          <br>
-        </div>
-      </div>
-      
-
+      <br><br>
     </div>
   
   <!-- Footer -->
