--- a/hardware.html
+++ b/hardware.html
@@ -98,14 +98,14 @@
           <br>
       </div>
 
-      <!-- Container (Synth Design Section) -->
+      <!-- Container (HELIOS ONE SECTION) -->
       <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
         <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">HELIOS ONE SYNTH</h3>
         <p class="w3-center"><em>An Easy To Build Mono Synth</em></p>
         <div class="w3-row">
           <div class="w3-col m6 w3-center w3-padding-large">
             <br>
-            <img src="images/heliosOneAngled.png" alt="DIY Mono Synth" title="DIY Mono Synth" width="100%">
+            <img src="images/heliosOneAngled.png" alt="DIY Mono Synth" title="DIY Mono Synth" width="90%">
             <!-- <img src="images/fishTank1.png" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333"> -->
           </div>
         
@@ -123,7 +123,7 @@
           <br>
 
 
-                <!-- Container (Synth Design Section) -->
+        <!-- Container (DRUM PADS Section) -->
       <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
         <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">ARDUINO SAMPLING DRUM PAD</h3>
         <p class="w3-center"><em>An Easy To Build Arduino Drum Pad</em></p>
@@ -136,7 +136,7 @@
             Your browser does not support the video tag. -->
             <!-- </video> -->
             <br>
-            <img src="images/ArduinoDrumKitGif.gif" alt="DIY String Synth with Analog Filter" title="DIY String Synth with Analog Filter" width="100%">
+            <img src="images/ArduinoDrumKitGif.gif" alt="DIY String Synth with Analog Filter" title="DIY String Synth with Analog Filter" width="90%">
             <!-- <img src="images/fishTank1.png" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333"> -->
           </div>
         
