--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
    <!-- Navbar (sit on top) -->
 <div class="w3-top">
     <div class="w3-bar" id="myNavbar">
-      <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
-        <i class="fa fa-bars"></i>
-      </a>
+      <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu"></a>
       <a href="index.html" class="w3-bar-item w3-button NaVFontCol">HOME</a>
       <a href="portfolio.html" class="w3-bar-item w3-button w3-hide-small NaVFontCol"></i>VR</a>
       <a href="hardware.html" class="w3-bar-item w3-button w3-hide-small NaVFontCol"></i>HARDWARE</a>
@@ -74,9 +72,6 @@
     <h4 class="w3-padding-large w3-center"><em>"I'm not the best at coding, so your explanations were useful and I've certainly learnt a lot more than I knew before I found your site!"</em></h4>
 
     <h4 class="w3-padding w3-center"><em>"Just a quick note to say thanks for the Helios project article. It started me off down a fantastic rabbit hole.."</em></h4>
-    
-
-
 
 
     <!-- Container (Example Projects) -->
